--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="icon" type="image/x-icon" href="leonfav.ico">
   </head>
   <body>
-    
+    <img style="umbrella" src="umbrellalogo.webp">
   </body>
 </html>
