--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/x-icon" href="leonfav.ico">
   </head>
   <body>
+    <p>hii :3</p>
     <img class="umbrella" src="umbrellalogo.webp">
   </body>
 </html>
