--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <link rel="icon" type="image/x-icon" href="leonfav.ico">
   </head>
   <body>
-    <p>hii :3</p>
+    <div class="container1">
+      <div class="header">footer</div>
+      <div class="nav">main</div>
+      <div class="main">nav</div>
+      <div class="more">more</div>
+      <div class="footer">footer</div>
+    </div>
     <img class="umbrella" src="umbrellalogo.webp">
   </body>
 </html>
