--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <div class="container1">
-      <div class="header">footer</div>
-      <div class="nav">main</div>
-      <div class="main">nav</div>
+      <div class="header">header</div>
+      <div class="nav">nav</div>
+      <div class="main">main</div>
       <div class="more">more</div>
       <div class="footer">footer</div>
     </div>
