--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <link rel="icon" type="image/x-icon" href="leonfav.ico">
   </head>
   <body>
-    <div class="container1">
+    <center><div class="container1">
       <div class="header">header</div>
       <div class="nav">˚₊‧꒰ა nav ໒꒱ ‧₊˚</div>
       <div class="main">main</div>
       <div class="more">⋅˚₊‧ more ‧₊˚ ⋅</div>
       <div class="footer">footer</div>
     </div>
+    </center>
     <img class="umbrella" src="umbrellalogo.webp">
   </body>
 </html>
