--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     </div>
     </center>
     <img class="umbrella" src="umbrellalogo.webp">
+    <img class="leonleftpng" src="leonpng.png">
   </body>
 </html>
