--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   <body>
     <center><div class="container1">
       <div class="header">header</div>
-      <div class="nav">˚₊‧꒰ა nav ໒꒱ ‧₊˚</div>
+      <div class="nav">
+        ˚₊‧꒰ა nav ໒꒱ ‧₊˚
+        <p>
+          <a href="index.html">home</a>
+          <a href="wil.html">who is leon</a>
+        </p>
+      </div>
       <div class="main">main</div>
       <div class="more">⋅˚₊‧ more ‧₊˚ ⋅</div>
       <div class="footer">footer</div>
