--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <center><div class="container1">
-      <div class="header">header</div>
+      <div class="header">home</div>
       <div class="nav">
-        ˚₊‧꒰ა nav ໒꒱ ‧₊˚
+        <h1>˚₊‧꒰ა nav ໒꒱ ‧₊˚</h1>
         <a href="index.html">home</a>
         <a href="wil.html">who is leon</a>
       </div>
