--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <center><div class="container1">
       <div class="header">home</div>
       <div class="nav">
-        <h1>˚₊‧꒰ა nav ໒꒱ ‧₊˚</h1>
+        ˚₊‧꒰ა nav ໒꒱ ‧₊˚
         <a href="index.html">home</a>
         <a href="wil.html">who is leon</a>
       </div>
