--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="header">home</div>
       <div class="nav">
         ˚₊‧꒰ა nav ໒꒱ ‧₊˚
-        <a href="index.html">home</a>
+        <a href="index.html">home</a><br>
         <a href="wil.html">who is leon</a>
       </div>
       <div class="main">main</div>
