--- a/wil.html
+++ b/wil.html
@@ -10,10 +10,8 @@
       <div class="header">who is leon ?</div>
       <div class="nav">
         ˚₊‧꒰ა nav ໒꒱ ‧₊˚
-        <p>
-          <a href="index.html">home</a>
+          <a href="index.html">home</a><br>
           <a href="wil.html">who is leon</a>
-        </p>
       </div>
       <div class="main">
         <p>
