--- a/wil.html
+++ b/wil.html
@@ -15,14 +15,14 @@
       </div>
       <div class="main">
         <p>
-        leon is a character from the game series: resident evil .
-        basic info:
-        name: leon scott kennedy
-        birthday: july 31 1977
-        eye color: blue
-        blood type: A
-        weight: 165 lbs / 75 kg
-        height: 5'11" / 180cm
+        leon is a character from the game series: resident evil .<br>
+        basic info:<br>
+        name: leon scott kennedy<br>
+        birthday: july 31 1977<br>
+        eye color: blue<br>
+        blood type: A<br>
+        weight: 165 lbs / 75 kg<br>
+        height: 5'11" / 180cm<br>
         face model: eduard badaluta
         </p>
       </div>
