--- a/wil.html
+++ b/wil.html
@@ -3,7 +3,7 @@
   <head>
     <title>hii</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="leonfav.ico">
+    <link rel="icon" type="image/x-icon" href="leonnn.ico">
   </head>
   <body>
     <center><div class="container1">
