--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <center><div class="container1">
-      <div class="header">home</div>
+      <div class="header"><img class="relogo" src="relogo.png"></div>
       <div class="nav">
         ˚₊‧꒰ა nav ໒꒱ ‧₊˚
         <a href="index.html">home</a><br>
