--- a/wil.html
+++ b/wil.html
@@ -7,13 +7,14 @@
   </head>
   <body>
     <center><div class="container1">
-      <div class="header">who is leon ?</div>
+      <div class="header"><img class="relogo" src="relogo.png"></div>
       <div class="nav">
         ˚₊‧꒰ა nav ໒꒱ ‧₊˚
           <a href="index.html">home</a><br>
           <a href="wil.html">who is leon</a>
       </div>
       <div class="main">
+        <p>who is leon?</p>
         <p>
         leon is a character from the game series: resident evil .<br>
         basic info:<br>
